--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
+    "@prisma/client": "^4.8.1",
     "@remix-run/node": "^1.10.1",
     "@remix-run/react": "^1.10.1",
     "@remix-run/vercel": "^1.10.1",
@@ -21,6 +22,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "prisma": "^4.8.1",
     "typescript": "^4.8.4"
   },
   "engines": {
