--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "typecheck": "tsc -b"
   },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.8.1",
     "@remix-run/node": "^1.10.1",
@@ -24,6 +27,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "concurrently": "^7.6.0",
+    "esbuild-register": "^3.4.2",
     "eslint": "^8.27.0",
     "prisma": "^4.8.1",
     "tailwindcss": "^3.2.4",
