--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@vercel/node": "^2.6.2",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@remix-run/dev": "^1.10.1",
     "@remix-run/eslint-config": "^1.10.1",
     "@remix-run/serve": "^1.10.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "concurrently": "^7.6.0",
