--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "isbot": "^3.6.5",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1",
@@ -56,6 +57,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.18",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
