--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "typecheck": "tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
-  "prettier": {},
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
+  },
   "eslintIgnore": [
     "/node_modules",
     "/build",
@@ -81,8 +85,8 @@
     "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "prisma": "^5.7.1",
     "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3.3.3",
