--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pretest:e2e:run": "npm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "prisma:studio": "prisma studio"
   },
   "prettier": {
     "plugins": [
@@ -43,6 +44,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "prisma": "^5.7.1",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -87,7 +89,6 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "prisma": "^5.7.1",
     "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.1",
