--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "data-migration:add_image": "ts-node ./prisma/migrations/20240115180531_add_event_image_as_optional/data-migration.ts"
   },
   "prettier": {
     "plugins": [
