--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prisma": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.1",
