--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@conform-to/react": "^0.9.1",
     "@conform-to/zod": "^0.9.1",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -98,8 +98,8 @@
     "sharp": "^0.33.2",
     "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3.4.0",
-    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.2.1",
@@ -109,6 +109,6 @@
     "node": ">=20.0.0"
   },
   "prisma": {
-    "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
