--- a/package.json
+++ b/package.json
@@ -103,6 +103,9 @@
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.0"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "engines": {
     "node": ">=20.0.0"
   },
