--- a/package.json
+++ b/package.json
@@ -57,17 +57,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@faker-js/faker": "^8.4.1",
     "@remix-run/dev": "^2.12.1",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@types/bcryptjs": "^2.4.5",
-    "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.5",
     "autoprefixer": "^10.4.19",
@@ -75,18 +73,13 @@
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "cypress": "^13.13.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint": "^9.16.0",
+    "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-import-x": "^4.5.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.13.0",
     "happy-dom": "^14.12.3",
     "msw": "^2.3.1",
     "npm-run-all": "^4.1.5",
@@ -99,6 +92,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.17.0",
     "vite": "^5.3.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.3"
