--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
     "@headlessui/react": "^2.2.0",
+    "@mjackson/file-storage": "^0.3.0",
+    "@mjackson/form-data-parser": "^0.5.1",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -60,7 +62,6 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@faker-js/faker": "^9.3.0",
-    "@react-router/remix-config-routes-adapter": "^0.0.0-nightly-bf7ecb711-20240911",
     "@remix-run/dev": "^2.15.2",
     "@remix-run/fs-routes": "^2.15.2",
     "@remix-run/route-config": "^2.15.2",
