--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
     "@headlessui/react": "^2.2.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@mjackson/file-storage": "^0.3.0",
     "@mjackson/form-data-parser": "^0.5.1",
     "@prisma/client": "^6.1.0",
@@ -65,6 +66,7 @@
     "@remix-run/dev": "^2.15.2",
     "@remix-run/fs-routes": "^2.15.2",
     "@remix-run/route-config": "^2.15.2",
+    "@tailwindcss/typography": "^0.5.15",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/bcryptjs": "^2.4.5",
