--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "binode --import ./mocks/index.js -- @remix-run/dev:remix vite:dev",
+    "build": "react-router build",
+    "dev": "node ./mocks/index.js & react-router dev",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
-    "start": "remix-serve ./build/server/index.js",
-    "start:mocks": "binode --import ./mocks/index.js -- @remix-run/serve:remix-serve ./build/server/index.js",
+    "start": "react-router-serve ./build/server/index.js",
+    "start:mocks": "node ./mocks/index.js & react-router-serve ./build/server/index.js",
     "test": "vitest",
     "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
     "pretest:e2e:run": "npm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
-    "typecheck": "tsc && tsc -p cypress",
+    "typecheck": "react-router typegen && tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
     "prisma:studio": "prisma studio",
     "optimize:images": "tsx app/optimize-images.ts"
@@ -43,11 +43,9 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@remix-run/fs-routes": "^2.15.2",
-    "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
-    "@remix-run/route-config": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
+    "@react-router/fs-routes": "^7.0.0",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,6 +53,7 @@
     "prisma": "^6.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router": "^7.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -64,7 +63,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@faker-js/faker": "^9.3.0",
-    "@remix-run/dev": "^2.15.2",
+    "@react-router/dev": "^7.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.6.3",
