--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "exclude": ["./cypress", "./cypress.config.ts"],
-  "include": ["env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["env.d.ts", "**/*.ts", "**/*.tsx", ".react-router/types/**/*"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
-    "types": ["@remix-run/node", "vite/client", "vitest/globals"],
+    "types": ["@react-router/node", "vite/client", "vitest/globals"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -19,6 +19,7 @@
       "~/*": ["./app/*"]
     },
     "skipLibCheck": true,
+    "rootDirs": [".", "./.react-router/types"],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
