--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
