--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "intl-parse-accept-language": "^1.0.0",
     "isbot": "^5.1.18",
     "prisma": "^6.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.1.1",
+    "remix-utils": "^8.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
