--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
     "@mdx-js/rollup": "^3.1.0",
-    "@mjackson/file-storage": "^0.5.0",
+    "@mjackson/file-storage": "^0.6.1",
     "@mjackson/form-data-parser": "^0.7.0",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -89,7 +89,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
-    "happy-dom": "^16.8.1",
+    "happy-dom": "^17.0.0",
     "msw": "^2.7.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.39",
@@ -107,7 +107,7 @@
     "vitest": "^3.0.5"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.34.3"
+    "@rollup/rollup-linux-x64-gnu": "^4.34.6"
   },
   "engines": {
     "node": ">=20.18.0"
