add verbatim syntax to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "skipLibCheck": true,
     "rootDirs": [".", "./.react-router/types"],
 
+    "verbatimModuleSyntax": true,
+
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
   }
