--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-dom": "19.0.0",
     "react-router": "^7.1.5",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
     "winston": "^3.17.0",
@@ -68,6 +68,7 @@
     "@eslint/js": "^9.19.0",
     "@faker-js/faker": "^9.5.0",
     "@react-router/dev": "^7.1.5",
+    "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/cypress": "^10.0.3",
     "@testing-library/jest-dom": "^6.6.3",
@@ -76,7 +77,6 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.5",
-    "autoprefixer": "^10.4.20",
     "binode": "^1.0.5",
     "cookie": "^1.0.2",
     "cross-env": "^7.0.3",
@@ -96,7 +96,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.33.5",
     "start-server-and-test": "^2.0.10",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
