--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mdx-js/rollup": "^3.1.0",
     "@mjackson/file-storage": "^0.6.1",
     "@mjackson/form-data-parser": "^0.7.0",
+    "@mjackson/lazy-file": "^3.3.1",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
