--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-router/fs-routes": "^7.3.0",
     "@react-router/node": "^7.1.5",
@@ -53,6 +53,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "isbot": "^5.1.25",
     "prisma": "^6.5.0",
     "react": "19.0.0",
@@ -61,8 +63,8 @@
     "sharp": "^0.33.5",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
+    "tw-animate-css": "^1.2.5",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
