--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.26",
     "prisma": "^6.6.0",
     "react": "^19.1.0",
@@ -63,7 +65,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
-    "tw-animate-css": "^1.2.5",
+    "tw-animate-css": "^1.2.7",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
   },
