--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "node ./mocks/index.js & react-router dev",
+    "dev": "node ./mocks/index.js & react-router dev --host",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
@@ -31,13 +31,13 @@
     "/public/build"
   ],
   "dependencies": {
-    "@conform-to/react": "^1.7.2",
-    "@conform-to/zod": "^1.7.2",
+    "@conform-to/react": "^1.8.2",
+    "@conform-to/zod": "^1.8.2",
     "@mdx-js/rollup": "^3.1.0",
     "@mjackson/file-storage": "^0.7.0",
-    "@mjackson/form-data-parser": "^0.7.0",
+    "@mjackson/form-data-parser": "^0.9.1",
     "@mjackson/lazy-file": "^3.4.0",
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -47,63 +47,63 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-router/fs-routes": "^7.6.2",
-    "@react-router/node": "^7.6.2",
-    "@react-router/serve": "^7.6.2",
+    "@react-router/fs-routes": "^7.7.0",
+    "@react-router/node": "^7.7.0",
+    "@react-router/serve": "^7.7.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.28",
-    "prisma": "^6.10.1",
+    "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.2",
-    "sharp": "^0.34.2",
-    "sonner": "^2.0.5",
+    "react-router": "^7.7.0",
+    "sharp": "^0.34.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
     "winston": "^3.17.0",
-    "zod": "^3.25.67"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
-    "@faker-js/faker": "^9.8.0",
-    "@react-router/dev": "^7.6.2",
+    "@faker-js/faker": "^9.9.0",
+    "@react-router/dev": "^7.7.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/cypress": "^10.0.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^24.0.7",
+    "@types/node": "^24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "^3.2.4",
     "binode": "^1.0.5",
     "cookie": "^1.0.2",
     "cross-env": "^7.0.3",
-    "cypress": "^14.5.0",
-    "eslint": "^9.30.0",
+    "cypress": "^14.5.2",
+    "eslint": "^9.31.0",
     "eslint-plugin-cypress": "^5.1.0",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
-    "msw": "^2.10.2",
+    "msw": "^2.10.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "start-server-and-test": "^2.0.12",
     "tailwindcss": "^4.1.11",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "vite": "^6.3.5",
+    "typescript-eslint": "^8.37.0",
+    "vite": "^7.0.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
