--- a/package.json
+++ b/package.json
@@ -34,76 +34,75 @@
     "@conform-to/react": "^1.8.2",
     "@conform-to/zod": "^1.8.2",
     "@mdx-js/rollup": "^3.1.0",
-    "@mjackson/file-storage": "^0.7.0",
-    "@mjackson/form-data-parser": "^0.9.1",
-    "@mjackson/lazy-file": "^3.4.0",
-    "@prisma/client": "^6.12.0",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@prisma/client": "^6.14.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-router/fs-routes": "^7.7.0",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-router/fs-routes": "^7.8.2",
     "@react-router/node": "^7.7.0",
-    "@react-router/serve": "^7.7.0",
+    "@react-router/serve": "^7.8.2",
+    "@remix-run/file-storage": "^0.9.0",
+    "@remix-run/form-data-parser": "^0.10.1",
+    "@remix-run/lazy-file": "^3.5.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "isbot": "^5.1.28",
-    "prisma": "^6.12.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.7.0",
+    "isbot": "^5.1.30",
+    "prisma": "^6.14.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.2",
     "sharp": "^0.34.3",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
     "winston": "^3.17.0",
-    "zod": "^4.0.5"
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
-    "@faker-js/faker": "^9.9.0",
-    "@react-router/dev": "^7.7.0",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@faker-js/faker": "^10.0.0",
+    "@react-router/dev": "^7.8.2",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/cypress": "^10.0.3",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.8.0",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^24.0.15",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
     "@vitest/coverage-v8": "^3.2.4",
     "binode": "^1.0.5",
     "cookie": "^1.0.2",
-    "cross-env": "^7.0.3",
-    "cypress": "^14.5.2",
-    "eslint": "^9.31.0",
-    "eslint-plugin-cypress": "^5.1.0",
+    "cross-env": "^10.0.0",
+    "cypress": "^15.0.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-cypress": "^5.1.1",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
-    "msw": "^2.10.4",
+    "msw": "^2.10.5",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "start-server-and-test": "^2.0.12",
+    "start-server-and-test": "^2.0.13",
     "tailwindcss": "^4.1.11",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.37.0",
-    "vite": "^7.0.5",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
+    "vite": "^7.1.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
